# compiler-2026

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LEXER_FUNCTIONS.md  README.md  assign_call.ir  assign_call.sy  assign_simple.ir  call_sample.s  parser_bug.txt  readme.md  return_call.ir  sample.s  sample.sy  sample_if.sy  sample_out.s  stress_sample.sy  tmp_manual.s  tmp_manyargs.s  tmp_manyargs_compiler.s  tmp_manyargs_compiler2.s  发展步骤.md
build-wsl/: DartConfiguration.tcl
build-wsl/tests/: test_driver
cmake/: AuxFunctions.cmake
fixtures/: assign_call.s  assign_simple.sy  call_sample.sy  return_call.sy  sample_semicolon.sy  stress_sample.s
include/: CMakeLists.txt
include/GenIR/: CMakeLists.txt  SymbolBuild.h  Visitor.h
include/IR/: CMakeLists.txt  IRBuilder.h  IR_Builder.h  IR_Value.h  Value.h  basicblock.h  list.h  listnode.h  module.h  type.h  use.h
include/IR/Value/: CMakeLists.txt  constant.h  globalvalue.h  instruction.h  user.h
include/IR/opt/: CMakeLists.txt  DCE.h  InstCombine.h  MemoryOpt.h  Pass.h  PassManager.h  Passes.h  SimplifyCFG.h  constantfolder.h
include/Lex/: CMakeLists.txt  Lexer.h
include/Parse/: AST.h  CMakeLists.txt  Grammar.h  Lexer.h  Parser.h
include/SymbolTable/: CMakeLists.txt  SymbolBuild.h  SymbolTable.h
include/backend/: AsmConstant.h  CMakeLists.txt  Instructions.h  component.h
include/backend/RiscVOperand/: BasicOperand.h  CMakeLists.txt  OpAddress.h  OpImmediate.h  OpIntImmediate.h  OpLabel.h  OpRegister.h  OpStackVariable.h
include/mir/: IRBuilder.h  Value.h  basicblock.h  list.h  listnode.h  type.cpp  type.h  use.h
include/mir/Value/: constant.h  instruction.h  user.h
include/utils/: CMakeLists.txt  error.h  recycle.h
lib/: CMakeLists.txt
lib/IR/: CMakeLists.txt  DCE.cpp  IRBuilder.cpp  IR_Builder.cpp  InstCombine.cpp  MemoryOpt.cpp  Pass.cpp  PassManager.cpp  SimplifyCFG.cpp  basicblock.cpp  constantfolder.cpp  module.cpp  recycle.cpp  type.cpp  use.cpp  value.cpp
lib/IR/GenIR/: CMakeLists.txt  Visitor.cpp
lib/IR/Value/: CMakeLists.txt  constant.cpp  globalvalue.cpp  instruction.cpp  user.cpp
lib/IR/utils/: CMakeLists.txt  list.cpp  listnode.cpp
lib/Lex/: CMakeLists.txt  Lexer.cpp
lib/Parse/: AST.cpp  AST2String.cpp  CMakeLists.txt  Grammar.cpp  Lexer.cpp  Parser.cpp
lib/backend/: AsmBasicBlock.cpp  AsmFunction.cpp  CMakeLists.txt
lib/utils/: CMakeLists.txt  recycle.cpp
test/custom/: call_many.sy  loop_heavy.sy  loop_phi_crash.sy  manual.sy  manyargs2.sy  recursion.sy  short_circuit.sy  simble.sy  spill_heavy.sy  spill_test.sy
tests/: CMakeLists.txt  test_IR.cpp  test_backend.cpp  test_driver.cpp  test_example.cpp  test_lexer.cpp  test_optimizer.cpp  test_parser.cpp  test_parser1.cpp  test_parser2.cpp  test_symboltable1.cpp
tmp/: 流程输出.txt
tools/: debug_sysy.ps1  run_sysy_tests.py  sysy_compiler.cpp  test_all_sysy.ps1
utils/: CMakeLists.txt  recycle.cpp
